# yt-dlp-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  devops.md
src/: config.rs  handlers.rs  main.rs  ytdlp.rs
