[package]
name = "yt-dlp-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tempfile = "3"
tokio-util = { version = "0.7", features = ["io"] }
anyhow = "1"
axum-extra = { version = "0.10", features = ["multipart"] }
base64 = "0.22"
